--- a/style.css
+++ b/style.css
@@ -94,6 +94,12 @@
     color:#fff;
     background-color: #000;
 }
+.menu{
+    color: #000;
+}
+.menu1{
+    color:#66758a;
+}
 .profile-img img{
      width:37px;
      height:37px;
