--- a/style.css
+++ b/style.css
@@ -382,6 +382,9 @@
         grid-column-gap:12px;
         grid-row-gap:12px;
     }
+    .mainsection{
+        margin-inline: -10px;
+    }
     .logo img{
         width:80px;
         margin-left: 60px;
@@ -424,13 +427,13 @@
     }
     .logo img{
         width:120px;
-        margin-left: -40px;
+        margin-left: -20px;
     }
     .profile-btn a{
         font-size: 16px;
     }
     .profilelink{
-        margin-left: 220px;
+        margin-left: 300px;
     }
     .section{
         margin-inline: -80px;
@@ -481,7 +484,7 @@
 @media (min-width:1025px) and (max-width:1450px){
     .logo img{
         width:120px;
-        margin-left: 35px;
+        margin-left: 10px;
     }
     .sidebar-menu{
         margin-left: -20px; 
