--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@
     padding: 10px 16px;
     font-family: 'regular';
     font-weight: 700;
+    font-size: 14px;
     border-radius: 12px;
     text-align: center;
     margin-bottom: 20px;
@@ -382,15 +383,27 @@
         grid-column-gap:12px;
         grid-row-gap:12px;
     }
+    .head{
+        margin-left: 30px;
+    }
     .mainsection{
-        margin-inline: -10px;
+         margin-inline: -40px; 
     }
     .logo img{
-        width:80px;
-        margin-left: 20px;
+        width:125px;
+        margin-left: -40px;
+    }
+    .h-ead{
+         margin-left: 60px; 
+    }
+    .last-section{
+        margin-left: 60px;
     }
     .profile-btn a{
         font-size: 13px;
+    }
+    .sport,.sport1{
+        margin-left: 60px;
     }
     .menubar{
         display: none;
@@ -398,26 +411,43 @@
     .sidebar-content{
         display: none;
     }
-    .content-section{
-        padding-left: 30px;
-    }
     .head1 h1{
         font-size: 36px;
     }
+    .head1{
+        margin-left:60px;
+    }
     .art-sec{
-        width:130px;
+        width:160px;
+        margin-left: 60px;
     }
     .art-sec a{
         top:90px;
     }
     .art1{
-        width:130px;
+        width:160px;
+    }
+    #circle{
+        left:20px;
+    }
+    .dot{
+        background-color:#fff;
+    }
+    .para,.para1{
+        margin-left: 60px;
+        font-size: 10px;
+    }
+    .btn{
+        margin-left: 60px;
+        font-size: 11px;
+        padding: 8px 10px;
     }
     .low,.low1{
-        width:125px;
+        width:145px;
+        height:190px;
     }
     .las_sec,.las_sec1{
-        width:120px;
+        width:140px;
     }
 }
 @media (min-width:481px) and (max-width:840px){
