--- a/style.css
+++ b/style.css
@@ -380,30 +380,22 @@
 }
 @media (min-width:320px) and (max-width:480px){
     .header{
-        grid-column-gap:12px;
-        grid-row-gap:12px;
-    }
-    .head{
-        margin-left: 30px;
-    }
-    .mainsection{
-         margin-inline: -40px; 
+        margin-inline: 10px;
     }
     .logo img{
         width:125px;
-        margin-left: -40px;
     }
     .h-ead{
-         margin-left: 60px; 
+         margin-left: 50px; 
     }
     .last-section{
-        margin-left: 60px;
+        margin-inline: 30px;
     }
     .profile-btn a{
         font-size: 13px;
     }
     .sport,.sport1{
-        margin-left: 60px;
+        margin-inline: 30px;
     }
     .menubar{
         display: none;
@@ -414,18 +406,21 @@
     .head1 h1{
         font-size: 36px;
     }
+    .head1 p{
+        font-size: 16px;
+    }
     .head1{
         margin-left:60px;
     }
     .art-sec{
-        width:160px;
-        margin-left: 60px;
+        width:165px;
+        margin-left: 45px;
     }
     .art-sec a{
         top:90px;
     }
     .art1{
-        width:160px;
+        width:168px;
     }
     #circle{
         left:20px;
@@ -434,20 +429,26 @@
         background-color:#fff;
     }
     .para,.para1{
-        margin-left: 60px;
-        font-size: 10px;
+        margin-left: 35px;
+        font-size: 12px;
     }
     .btn{
-        margin-left: 60px;
-        font-size: 11px;
+        margin-left:30px;
+        font-size: 14px;
         padding: 8px 10px;
     }
     .low,.low1{
-        width:145px;
+        width:160px;
         height:190px;
     }
     .las_sec,.las_sec1{
-        width:140px;
+        width:155px;
+    }
+    .low{
+        margin-left: 25px; 
+    }
+    .las_sec{
+        margin-left: 30px;
     }
 }
 @media (min-width:481px) and (max-width:840px){
