--- a/style.css
+++ b/style.css
@@ -27,34 +27,24 @@
     font-family: 'black';
     src:url(./fonts/Baloo-Regular.ttf);
 }
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .header{
-    z-index:900;
-    width:100%;
-    height: auto;
     background: #fff;
     border: 1px #000;
     align-items: center;
-    padding-inline:108px;
     position: sticky;
     top:0;
 }
 .head{
-    width:100%;
-    height:100%;
-    grid-column-gap:16px;
-    grid-row-gap:16px; 
-    grid-template-rows: auto; 
-    grid-template-columns: .25fr .5fr .25fr; 
-    grid-auto-columns: 1fr;
-    display:grid;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
 }
 .logo img{
-    width:150px;
-    height: 38px;
+    width:200px;
+    height: 50px;
     margin-top: 23px;
 }
 .menubar{
@@ -62,8 +52,8 @@
     height: 50px;
     border:2px solid #f5f5f5;
     border-radius: 16px;
-    padding: 8px;
-    margin-inline: 80px;
+    padding: 8px 16px;
+    margin-inline: 160px;
     display:flex;
     justify-content: space-around;
     align-items: center;
@@ -75,7 +65,7 @@
     background-color: #000;
     border-radius: 13px;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 18px;
     font-family: 'regular';
     border: 2px solid #000;
     padding: 8px 16px;
@@ -83,8 +73,8 @@
 .menulink{
     color:#66758a;
     border-radius: 12px;
-    padding: 8px 16px;
-    font-size: 14px;
+    padding: 8px 18px;
+    font-size: 16px;
     font-weight: 500;
     font-family: 'regular';
     transition: all ease .4s;
@@ -101,8 +91,8 @@
     color:#66758a;
 }
 .profile-img img{
-     width:37px;
-     height:37px;
+     width:45px;
+     height:45px;
      margin-top: 15px;
      border: 2px solid #994ff1;
      border-radius: 50%;
@@ -121,7 +111,7 @@
     font-weight: 600;
     cursor: pointer;
     border-radius: 10px;
-    padding-block:10px;
+    padding-block:20px;
     padding-inline:20px ;
     margin-left: 10px;
 }
@@ -139,26 +129,18 @@
     box-shadow: 0px 1px #994ff1;
 }
 .section{
-    padding-inline: 190px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .mainsection{
-     /* margin-left: auto !important; */
      margin-right: auto !important;
      padding-block: 60px;
 }
-.content-grid{
-    display: grid;
-    align-items: start;
-    grid-column-gap:20px;
-    grid-row-gap:20px;
-    grid-template-rows: auto;
-    grid-template-columns: .5fr 1.5fr;
-    grid-auto-columns:1fr;
-    position:relative;
-}
+ .content-grid{
+    display:inline-flex;
+    margin-inline: 20px;
+ }
 .sidebar-content{
     width:200px;
     height:400px;
@@ -219,7 +201,7 @@
 #m1{
     margin-left: 10px; 
     margin-top: 4px;
-    font-size: 18px;
+    font-size: 24px;
     font-family: 'bold';
     font-weight: 700;
     color:#000;
@@ -227,7 +209,7 @@
 #m2,#m3,#m4,#m5,#m6{
     margin-left: 10px; 
     margin-top: 4px;
-    font-size: 16px;
+    font-size: 20px;
     font-family: 'regular';
     font-weight: 600;
     color:rgb(115,128,148);
@@ -238,13 +220,15 @@
     font-weight: 800;
 }
 .head1 p{
+    font-size: 16px;
+    font-family: 'regular';
     color:#66758a;
 }
 .m-sec{
     display:flex;
 }
 .art-sec{
-    width:450px;
+    width:510px;
     height:215px;
     border-radius: 18px;
     color:#fff;
@@ -289,6 +273,9 @@
     font-family: 'bold';
     font-weight: 800;
 }
+.content-section{
+    margin-left: 120px;
+}
 .h-ead h2{
     margin-top: 20px;
     margin-bottom: 10px;
@@ -306,7 +293,7 @@
     margin-block: 20px;
 }
 .low{
-    width:230px;
+    width:300px;
     height:220px;
     border-radius: 16px;
     background-image: url(images/astro.png);
@@ -316,7 +303,7 @@
     margin-right: 25px;
 }
 .low1{
-    width:230px;
+    width:300px;
     height:220px;
     border-radius: 16px;
     background-image: url(images/astro1.png);
@@ -379,23 +366,31 @@
     margin-bottom: 20px;
 }
 @media (min-width:320px) and (max-width:480px){
-    .header{
-        margin-inline: 10px;
+    .head{
+        margin-left: 15px; 
     }
     .logo img{
-        width:125px;
+        width:135px;
+        height:65px;
     }
-    .h-ead{
-         margin-left: 50px; 
+    .profile-img img{
+        width:65px;
+        height:65px;
+    }
+    .profilelink{
+          margin-left: 15px;  
+    }
+    .content-section{
+         margin-inline: 5px;
     }
     .last-section{
-        margin-inline: 30px;
+        margin-inline: 10px;
     }
     .profile-btn a{
-        font-size: 13px;
+        font-size: 16px;
     }
     .sport,.sport1{
-        margin-inline: 30px;
+         margin-inline: 10px;
     }
     .menubar{
         display: none;
@@ -409,12 +404,8 @@
     .head1 p{
         font-size: 16px;
     }
-    .head1{
-        margin-left:60px;
-    }
     .art-sec{
         width:165px;
-        margin-left: 45px;
     }
     .art-sec a{
         top:90px;
@@ -429,12 +420,12 @@
         background-color:#fff;
     }
     .para,.para1{
-        margin-left: 35px;
-        font-size: 12px;
+        margin-left: 15px;
+        font-size: 16px;
     }
     .btn{
-        margin-left:30px;
-        font-size: 14px;
+        margin-left:10px;
+        font-size: 16px;
         padding: 8px 10px;
     }
     .low,.low1{
@@ -444,30 +435,27 @@
     .las_sec,.las_sec1{
         width:155px;
     }
-    .low{
-        margin-left: 25px; 
-    }
-    .las_sec{
-        margin-left: 30px;
+    .last-section{
+        margin-inline: 5px;
     }
 }
 @media (min-width:481px) and (max-width:840px){
-    .header{
-        grid-column-gap:18px;
-        grid-row-gap:18px;
-    }
     .logo img{
-        width:120px;
-        margin-left: -20px;
+        width:160px;
+        height:55px;
     }
     .profile-btn a{
         font-size: 16px;
     }
     .profilelink{
-        margin-left: 300px;
+        margin-left: 225px;
     }
-    .section{
-        margin-inline: -80px;
+    .profile-img img{
+        width:60px;
+        height:60px;
+    }
+    .content-grid{
+        margin-left: -120px;
     }
     .menubar{
         display: none;
@@ -488,15 +476,20 @@
         width:220px;
     }
     .low,.low1{
-        width:240px;
+        width:300px;
+        height:250px;
     }
     .las_sec,.las_sec1{
         width:220px;
     }
 }
 @media (min-width:841px) and (max-width:1024px){
+    .logo img{
+        width:160px;
+        margin-left: 60px;
+    }
     .section{
-        margin-inline: 30px;
+        margin-inline: 40px;
     }
     .art-sec{
         width:400px;
@@ -510,6 +503,12 @@
     .las_sec,.las_sec1{
         width:240px;
     }
+    .profilelink{
+        margin-left: -120px;
+    }
+    .menubar{
+        margin-left: 140px;
+    }
 
 }
 @media (min-width:1025px) and (max-width:1450px){
@@ -521,7 +520,7 @@
         margin-left: -20px; 
     }
     .content-section{
-        margin-right: 40px;
+        margin-left: 40px;
     }
     .art-sec{
         width:530px;
