--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
     color:#66758a;
     border-radius: 14px;
     padding: 10px 16px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     font-family: 'regular';
     transition: all ease .4s;
@@ -370,22 +370,22 @@
 }
 @media (min-width:320px) and (max-width:480px){
     .head{
-        margin-left: 18px; 
+        margin-left: 24px; 
     }
     .logo img{
-        width:120px;
-        height:45px;
+        width:110px;
+        height:40px;
     }
     .profile-img img{
-        width:65px;
-        height:65px;
+        width:60px;
+        height:60px;
     }
     .profilelink{
-          margin-left: 15px;  
+          margin-left: 20px;  
     }
     .profile-btn{
-        padding-block:22px;
-        padding-inline:14px;
+        padding-block:20px;
+        padding-inline:6px;
         margin-left: 14px;
     }
     .content-section{
@@ -395,7 +395,7 @@
         margin-inline: 10px;
     }
     .profile-btn a{
-        font-size: 16px;
+        font-size: 18px;
     }
     .sport,.sport1{
          margin-inline: 10px;
@@ -428,7 +428,7 @@
         background-color:#fff;
     }
     .para,.para1{
-        margin-left: 15px;
+        margin-left: 10px;
         font-size: 16px;
     }
     .btn{
@@ -490,7 +490,13 @@
     .las_sec,.las_sec1{
         width:220px;
     }
-}
+    .para1{
+        font-size: 14px;
+    }
+    .las_sec1{
+        margin-left: 70px;
+    }
+    }
 @media (min-width:841px) and (max-width:1024px){
     .logo img{
         width:160px;
