--- a/style.css
+++ b/style.css
@@ -373,8 +373,9 @@
         margin-left: 24px; 
     }
     .logo img{
-        width:110px;
-        height:40px;
+        width:115px;
+        height:45px;
+        margin-top: 20px;
     }
     .profile-img img{
         width:60px;
@@ -410,7 +411,7 @@
         font-size: 36px;
     }
     .head1 p{
-        font-size: 16px;
+        font-size: 15px;
     }
     .art-sec{
         width:165px;
