--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@
     display: flex;
 }
 .logo img{
-    width:200px;
-    height: 50px;
-    margin-top: 23px;
+    width:160px;
+    height: 40px;
+    margin-top: 28px;
+    margin-left: 10px;
 }
 .menubar{
     width:350px;
@@ -53,12 +54,12 @@
     border:2px solid #f5f5f5;
     border-radius: 16px;
     padding: 8px 16px;
-    margin-inline: 160px;
+    margin-inline: 180px;
     display:flex;
     justify-content: space-around;
     align-items: center;
     position: static;
-    margin-top: 10px;
+    margin-top: 24px;
 }
 .menulink.currentlink{
     color:#fff;
@@ -68,12 +69,12 @@
     font-size: 14px;
     font-family: 'regular';
     border: 2px solid #000;
-    padding: 8px 12px;
+    padding: 8px 10px;
 }
 .menulink{
     color:#66758a;
-    border-radius: 14px;
-    padding: 10px 16px;
+    border-radius: 18px;
+    padding: 8px 12px;
     font-size: 16px;
     font-weight: 500;
     font-family: 'regular';
@@ -86,6 +87,7 @@
 .menulink:hover{
     color:#fff;
     background-color: #000;
+    padding: 6px 8px;
 }
 .menu{
     color: #000;
@@ -94,9 +96,9 @@
     color:#66758a;
 }
 .profile-img img{
-     width:45px;
-     height:45px;
-     margin-top: 15px;
+     width:65px;
+     height:65px;
+     margin-top: 20px;
      border: 2px solid #994ff1;
      border-radius: 50%;
      padding: 2px;
@@ -105,6 +107,7 @@
 }
 .profilelink{
     display:flex;
+    margin-left: -28px;
 }
 .profile-btn{
     margin-top: 14px;
@@ -114,15 +117,22 @@
     font-weight: 600;
     cursor: pointer;
     border-radius: 10px;
-    padding-block:20px;
-    padding-inline: 20px;
-    margin-left: 8px;
+    padding:24px;
+    margin-left: 12px; 
+    margin-top: 28px;
+    border: none;
+    width:140px;
+    height:20px;
+    text-align: center;
 }
 .profile-btn a{
     text-decoration: none;
     font-size: 14px;
     font-family: 'regular';
     color:#fff;
+    position: relative;
+    bottom: 10px;
+    right:4px;
 }
 #art{
     margin-left: 6px;
