--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@
     color:#66758a;
 }
 .profile-img img{
-     width:65px;
-     height:65px;
+     width:60px;
+     height:60px;
      margin-top: 20px;
      border: 2px solid #994ff1;
      border-radius: 50%;
@@ -560,14 +560,17 @@
     }
 
 }
-@media (min-width:1451px){
+@media (min-width:1451px) and (max-width:2600px){
     .logo img{
         width:120px;
+        height:42px;
         margin-left: 10px;
+        margin-top: 26px;
     }
     .sidebar-menu{
         margin-left: -20px; 
     }
+    
     .content-section{
         margin-left: 40px;
     }
@@ -582,6 +585,33 @@
     }
     .las_sec,.las_sec1{
         width:240px;
+    }
+    .profilelink{
+        margin-left: -45px;
+    }
+    .menulink{
+        font-size: 14px;
+    }
+    .menulink.currentlink{
+        font-size: 12px;
+    }
+    #m1{ 
+        margin-top: 1px;
+    } 
+    #m2,#m3,#m4,#m5,#m6{
+        margin-top: 1px;
+    }  
+    .profile-img img{
+        width:48px;
+        height:48px;
+        margin-top: 26px;
+    } 
+    .profile-btn{
+        margin-top: 24px;
+    }
+    .profile-btn a{
+        font-size: 12px;
+        left:3px;
     }
 
 }
