--- a/style.css
+++ b/style.css
@@ -386,13 +386,13 @@
     .sub-container{
         margin-inline: 10px;
     }
-    .head{
-        margin-left: -20px;
+    .m-sec{
+        justify-content: center;
     }
     .logo img{
         width:125px;
         height:45px;
-        margin-left:-10px;
+        margin-left:80px;
     }
     .profile-img img{
         width:60px;
@@ -409,10 +409,10 @@
         margin-top: 22px;
     }
     .h-ead{
-          margin-left: -90px;
+          margin-left: -30px;
     }
     .low{
-        margin-left: -90px;
+        margin-left: -25px;
     }
     .profile-btn a{
         font-size: 16px;
@@ -427,15 +427,15 @@
     }
     .head1 h1{
         font-size: 36px;
-        margin-left: -90px;
+        margin-left: -30px;
     }
     .head1 p{
         font-size: 15px;
-        margin-left: -90px;
+        margin-left: -30px;
     }
     .art-sec{
         width:195px;
-        margin-left: -90px;
+        margin-left: -30px;
     }
     .art-sec a{
         top:90px;
@@ -450,11 +450,11 @@
         background-color:#fff;
     }
     .para,.para1{
-        margin-left: -90px;
+        margin-left: -25px;
         font-size: 14px;
     }
     .btn{
-        margin-left:-90px;
+        margin-left:-25px;
         font-size: 16px;
         padding: 8px 10px;
     }
@@ -466,7 +466,7 @@
         width:155px;
     }
     .sport,.sport1{
-         margin-left: -90px; 
+         margin-left: -25px; 
     }
 }
 @media (min-width:481px) and (max-width:840px){
