--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 }
 .head{
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-around;
 }
 .logo img{
     width:160px;
@@ -384,9 +384,6 @@
     cursor: pointer;
 }
 @media (min-width:320px) and (max-width:480px){
-    .container{
-        margin-inline:-30px;
-    }
     .m-sec{
         justify-content: center;
     }
@@ -412,7 +409,7 @@
           margin-left: -80px;
     }
     .low{
-        margin-left: -80px;
+         margin-left: -80px;
     }
     .profile-btn a{
         font-size: 16px;
@@ -427,14 +424,14 @@
     }
     .head1 h1{
         font-size: 36px;
-        margin-left: -80px;
+         margin-left: -80px;
     }
     .head1 p{
         font-size: 15px;
-        margin-left: -80px;
+         margin-left: -80px; 
     }
     .art-sec{
-        width:200px;
+        width:210px;
         margin-left: -120px;
     }
     .art-sec a{
@@ -453,23 +450,32 @@
         background-color:#fff;
     }
     .para,.para1{
-        margin-left: -75px;
+        margin-left: -65px;
         font-size: 14px;
     }
     .btn{
-        margin-left:-75px;
+        margin-left:-65px;
         font-size: 16px;
         padding: 8px 10px;
     }
     .low,.low1{
-        width:184px;
-        height:165px;
+        width:190px;
+        height:175px;
     }
     .las_sec,.las_sec1{
         width:155px;
     }
     .sport,.sport1{
-         margin-left: -75px; 
+          margin-left: -65px; 
+    }
+    .mainsection{
+        padding-block: 40px;
+    }
+    .content-grid{
+        margin-inline: -20px;
+    }
+    .head{
+        justify-content: space-around;
     }
 }
 @media (min-width:481px) and (max-width:840px){
